* fix bug where versions like 0.6.0.1 would be displayed as 0.6.1

Changes for 0.6.0.1

* fix bug [ 1225276 ] Aircraft unable to attack or land (sgb)

Changes for 0.6.0

* updated developer docs, incomplete for now (George_H)

* draw a line under overflow units so you can tell what belongs in a territory (sgb)

* fixed bug where you could retreat subs if all your opponents destroyers were destroyed in one round of combat (sgb)

* fixed bug where damaged battleships would not repair while viewing history (sgb)

* fixed small map refresh (whole map goes white) when switching skins (sgb)

* fixed bug where sometimes dice would not show up on the select casualties panel (sgb)

* removed "Heavy Bombers Pick best of X Dice" option from classic and wandering head big world, it didnt work (sgb)

* Fixed bug where transport moves could be undone before moves where the transport had been loaded/unloaded (sgb)

Changes for 0.5.4

* fixed bug where units could blitz through territories with an aa gun if they blitzed in 2 steps (4th edition only) (sgb)

* fixed bug [ 1188411 ] Missing client text (Chat window) 5.2.2 (sgb)

* fixed bug [ 1205387 ] Saving game during combat 0.5.3 (sgb)

* fixed bug [ 1205775 ] 0.5.3 eMail Bug - hyphens not allowed in emails (sgb)

* fixed bug [ 1205504 ] Units can land in amphibious assaults when transport is sunk (sgb)

* fixed bug [ 1198828 ]Heavy Bomber Tech Broken 0.5.3 (sgb)

Changes for 0.5.3

* added europe and pacific maps (incomplete versions) by iron cross (George_H)

* added extra dice statistics such as, median, variance, and standard deviation (George_H)

* fix bug [ 1023326 ] Fig Landing Problem, J1 (sgb)

* more flexible validation for planes landing on carriers (sgb)

* add stat export menu item Game->Export Game Stats (sgb)

* upgraded plastic look and feel to version 1.3.1 (sgb)

* add vc drawing and added vc cities to stats (sgb)

* better email address ui and validation, allow up to 5 emails in to and copy (sgb)
